--- a/ppx_cstruct.opam
+++ b/ppx_cstruct.opam
@@ -22,7 +22,7 @@ depends: [
   "ounit" {with-test}
   "ppxlib" {>= "0.16.0"}
   "ppx_sexp_conv" {with-test}
-  "sexplib" {>="v0.9.0"}
+  "sexplib0"
   "cstruct-sexp" {with-test}
   "cppo" {with-test}
   "cstruct-unix" {with-test & =version}
